# iot-chess

./: .gitignore  CMakeLists.txt  ChessValidator.py  pi_build
Chess/: CMakeLists.txt  PythonWrapper.cpp  PythonWrapper.h  main.cpp
Chess.xcodeproj/: project.pbxproj
Chess.xcodeproj/xcuserdata/macbook.xcuserdatad/xcschemes/: Chess.xcscheme  xcschememanagement.plist
Chess/BoardController/: BoardIngameEventsProtocol.h  BoardKeyEventsProtocol.h  BoardServicesImplementation.cpp  BoardServicesImplementation.h  BoardServicesProtocol.h  BoardSystemEventsProtocol.h  wiringPi.h  wiringSerial.h
Chess/BoardController/BoardEvents/: BoardIngameEventsProtocol.h  BoardKeyEventsProtocol.h  BoardServicesEventsProtocol.h  BoardSystemEventsProtocol.h
Chess/BoardController/Displayer/: DisplayerImplementation.cpp  DisplayerImplementation.h  DisplayerProtocol.h  IDisplayer.h
Chess/BoardController/Services/: BoardServices.cpp  BoardServices.h  BoardServicesImplementation.cpp  BoardServicesProtocol.h  IBoardServices.h  MessageController.cpp  MessageController.h
Chess/BoardController/Temp/: wiringSerial.h
Chess/ChessAI/Engine/: StockfishEngine.cpp  StockfishEngine.h
Chess/ChessAI/Validator/: IValidator.h  PythonChessValidator.cpp  PythonChessValidator.h  ValidatorProtocol.h
Chess/GameController/: DisplayerImplementation.cpp  DisplayerImplementation.h  DisplayerProtocol.h  GameController.h  GameScreen.cpp  GameScreen.h  OfflineGame.cpp  OfflineGame.h  Screen.cpp  Screen.h
Chess/GameController/Game/: GameController.cpp  GameController.h  GameEventsProtocol.h  GameState.h  OfflineGame.cpp  OfflineGame.h
Chess/GameController/Screens/: GameScreen.cpp  GameScreen.h  GameSettingScreen.cpp  ListScreen.cpp  ListScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  OffPositionScreen.cpp  OffPositionScreen.h  OptionScreen.cpp  OptionScreen.h  Screen.cpp  Screen.h
Chess/GameLogicProcessor/Engine/: EngineProtocol.h  StockfishEngine.cpp  StockfishEngine.h
Chess/GameLogicProcessor/EngineWrapper/: EngineWrapperProtocol.h  StockfishEngineWrapper.cpp  StockfishEngineWrapper.h
Chess/GameLogicProcessor/Validator/: PythonChessValidator.cpp
Chess/Hardware/Displayer/: Displayer.cpp  Displayer.h
Chess/Hardware/KeyboardController/: KeyboardController.cpp  KeyboardController.h  KeyboardEventsProtocol.h
Chess/Hardware/Services/: BoardServices.cpp  BoardServices.h  MessageController.cpp  MessageController.h
Chess/Hardware/Temp/: wiringPi.h  wiringPiI2C.h
Chess/Software/GameController/: GameController.cpp  GameController.h  GameEventsProtocol.h
Chess/Software/Screen/: ListScreen.cpp  ListScreen.h  OptionScreen.cpp  OptionScreen.h  Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h
Chess/Software/ScreenImplementors/: GameScreen.cpp  GameScreen.h  GameSettingScreen.cpp  GameSettingScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  OffPositionScreen.cpp  OffPositionScreen.h
Chess/Software/Wrappers/Engine/: IEngine.h  StockfishEngine.h
Chess/Software/Wrappers/PythonHelper/: PythonHelper.cpp  PythonHelper.h
Chess/Software/Wrappers/Validator/: IValidator.h  PythonChessValidator.cpp  PythonChessValidator.h
Common/: BaseTypes.h  GameEventsProtocol.h
Dylibs/: libboost_chrono.dylib  libboost_python.dylib  libboost_system.dylib  libboost_thread-mt.dylib  libcpprest.2.9.dylib
Network/: CMakeLists.txt
Network/NetworkEventsProtocol/: BaseConnectorProtocol.h  ConnectingEventsProtocol.h  GameEventsProtocol.h  RoomEventsProtocol.h
Network/NodeServerEventsImplementation/: NodeConnectorImplementation.cpp  NodeConnectorImplementation.h
Stockfish/: CMakeLists.txt  StockfishWrapper.cpp  StockfishWrapper.h  position.cpp  search.cpp  uci.cpp  uci.h
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/Chess/: Makefile  cmake_install.cmake  iot-chess
_build/Network/: Makefile  cmake_install.cmake
_build/Stockfish/: Makefile  cmake_install.cmake
